--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     </head>
     <body>
         <section class="container principal">
+            <div>
             <h1>Com a Combo+, você pode aproveitar o Alura+ e o Alura Língua por um preço único</h1>
             <img src="combo.png" alt="O combo+ é a junção do Alura+ e Alura Língua">
-            <a href="www.alura.com.br">Assine por 12x de R$ 120,00*</a>
+            <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
+            </div>
         </section>
     </body>
+
 </html>
