--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
     </head>
     <body>
         <section class="container principal">
-            <div>
-            <h1>Com a Combo+, você pode aproveitar o Alura+ e o Alura Língua por um preço único</h1>
-            <img src="combo.png" alt="O combo+ é a junção do Alura+ e Alura Língua">
+            <div class="container__caixa">
+            <h1 class="container__titulo">Com a Combo+, você pode aproveitar o Alura+ e o Alura Língua por um preço único</h1>
+            <img src="combo.png" alt="O combo+ é a junção do Alura+ e Alura Língua" class="container__imagem">
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
             <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feito em outros planos</p>
             </div>
+        </section>
+
+        <section class="container secundario">
+            <img src="img/plataformas.png" alt="Um monitor e um celular com o alura plus aberto" class="secundario__imagem">
+
         </section>
     </body>
 
