--- a/index.html
+++ b/index.html
@@ -21,9 +21,55 @@
         </section>
 
         <section class="container secundario">
-            <img src="img/plataformas.png" alt="Um monitor e um celular com o alura plus aberto" class="secundario__imagem">
-
+            <img src="plataformas.png" alt="Um monitor e um celular com o alura plus aberto" class="secundario__imagem">
+            <div class="container__descricao">
+                <h2 class="descricao__titulo">Assista do seu jeito</h2>
+                <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+            </div>
         </section>
+
+        <section class="container secundario">
+            <div class="container__descricao">
+                <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+                <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o combo+</a>
+            </div>
+            <img src="Telas.png" alt="Tela da alura plus e do alura lingua" class="secundario__imagem">
+        </section>
+
+        <section class="container secundario">
+            <img src="Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta" class="secundario__imagem">
+            <div class="container__descricao">
+                <h2 class="descricao__titulo">Baixe seus cursos</h2>
+                <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
+                você, até mesmo sem internet.</p>
+            </div>
+        </section>
+
+        <section class="dispositivos">
+            <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+            <ul class="dispositivos__lista">
+                <li>
+                    <img src="tv.png" alt="icone de televisao">
+                    <h3 class="lista__item">Tv</h3>
+                </li>
+                <li>
+                    <img src="computador.png" alt="icone de computador">
+                    <h3 class="lista__item">Computadores</h3>
+                </li>
+                <li>
+                    <img src="celular.png" alt="icone de celular">
+                    <h3 class="lista__item">celular</h3>
+                </li>
+            </ul>
+        </section>
+
+        <footer class="rodape">
+            <img src="Logo.png" alt="Alura+" class="rodape__logo">
+            <ul class="rodape__lista">
+
+            </ul>
+
+        </footer>
     </body>
 
 </html>
